# x-config

./: .gitignore  KbLocks.hs  LICENSE.md  README.md  dot-xmobarrc  dot-xmobarrc2  my-xmonad.cabal  xmonad.hs
lib/: KbLocks.hs
